StandardCharacters fix